# MeanVC

./: pyproject.toml
mean_vc/config/: config_200ms.json
mean_vc/infer/: dit_kvcache.py  infer_ref.py  modules.py
mean_vc/model/: __init__.py  utils.py
mean_vc/runtime/speaker_verification/: ecapa_tdnn.py
src/infer/: dit_kvcache.py
src/model/: prompt_vp.py
src/runtime/speaker_verification/: verification.py
